--- a/Client/Client/Views/Client/NewClient.cshtml
+++ b/Client/Client/Views/Client/NewClient.cshtml
@@ -6,6 +6,7 @@
 <script src="@Url.Content("~/ng/ngApp/ngApp.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/ng/ngService/ngCrudService.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/ng/ngControllers/ngNewClientController.js")" type="text/javascript"></script>
+<script src="@Url.Content("~/Scripts/jquery-1.10.2.min.js")"></script>
 
 <div class="content-wrapper" ng-controller="ClientController" ng-app="myapp">
     <form name="clientForm" ng-submit="Save()">
@@ -29,10 +30,10 @@
                             <div class="col-md-12 form-group alert alert-success" ng-show="successMessagebool ">
                                 {{successMessage}}
                             </div>
-                            <div class="col-sm-3">
-                                <div class="form-group">
+                            <div class="col-md-12">
+                                <div class="form-group col-sm-3">
                                     <label>Title</label>
-                                    <select class="form-control" ng-model="Title" required tabindex="1" ng-change="onChange()">
+                                    <select class="form-control" ng-model="Title" required ng-change="onChange()">
                                         <option value="" selected>Title</option>
                                         <option value="Mr">Mr</option>
                                         <option value="Miss">Miss</option>
@@ -41,56 +42,56 @@
                                         <option value="Dr">Dr</option>
                                     </select>
                                 </div>
-                                <div class="form-group">
+                                <div class="form-group col-sm-3">
+                                    <label>First Name</label>
+                                    <input type="text" class="form-control" placeholder="Enter Given Name" required ng-model="FirstName">
+                                </div>
+                                <div class="form-group col-sm-3">
+                                    <label>Last Name</label>
+                                    <input type="text" class="form-control" placeholder="Enter Sur Name" required ng-model="LastName">
+                                </div>
+                                <div class="form-group col-sm-3">
+                                    <label>SA ID</label>
+                                    <input type="text" class="form-control" placeholder="SA ID" id="SAID" ng-model="SAID" required maxlength="11">
+                                </div>
+                            </div>
+
+                            <div class="col-md-12">
+                                <div class="form-group col-sm-3">
                                     <label>Company</label>
-                                    <input type="text" class="form-control" placeholder="Company" ng-model="Company" required tabindex="5">
-                                </div>    
-                                <div class="form-group">
+                                    <input type="text" class="form-control" placeholder="Company" ng-model="Company" >
+                                </div>
+                                <div class="form-group col-sm-3">
+                                    <label>Company Registration Number</label>
+                                    <input type="text" class="form-control" placeholder="Company Registration No." ng-model="CompanyRegNo" >
+                                </div>
+                                <div class="form-group col-sm-3">
+                                    <label>Trust</label>
+                                    <input type="text" class="form-control" placeholder="Trust" ng-model="Trust" >
+                                </div>
+                                <div class="form-group col-sm-3">
+                                    <label>Trust Registration Number</label>
+                                    <input type="text" class="form-control" placeholder="Trust Registration No." ng-model="TrustRegNo" >
+                                </div>
+                            </div>
+
+                            <div class="col-md-12">
+                                <div class="form-group col-sm-3">
                                     <label>Mobile</label>
-                                    <input type="number" class="form-control" placeholder="Enter Mobile" required ng-model="Mobile" tabindex="9">
-                                </div>  
-                                <div class="form-group">
+                                    <input type="text" class="form-control" placeholder="Enter Mobile" required ng-model="Mobile" maxlength="10">
+                                </div>
+                                <div class="form-group col-sm-3">
+                                    <label>Email</label>
+                                    <input type="email" class="form-control" placeholder="Enter Email" required ng-model="EmailId">
+                                </div>
+
+                            </div>
+                            <div class="col-md-12">
+                                <div class="form-group col-sm-6">
                                     <button type="submit" class="btn btn-primary btn-rounded w-md m-b-5">Save</button>
                                     <button type="button" class="btn btn-danger btn-rounded w-md m-b-5" ng-click="Cancel()">Cancel</button>
-                                </div>                         
-                            </div>
-                            <div class="col-sm-3">
-                                <div class="form-group">
-                                    <label>First Name</label>
-                                    <input type="text" class="form-control" placeholder="Enter First Name" required ng-model="FirstName" tabindex="2">
-                                </div>
-                                <div class="form-group">
-                                    <label>Company Registration Number</label>
-                                    <input type="number" class="form-control" placeholder="Company Registration Number" ng-model="CompanyRegNo" required tabindex="6">
-                                </div>
-                                <div class="form-group">
-                                    <label>Email</label>
-                                    <input type="email" class="form-control" placeholder="Enter Email" required ng-model="EmailId" tabindex="10">
                                 </div>
                             </div>
-                            <div class="col-sm-3">
-                                <div class="form-group">
-                                    <label>Last Name</label>
-                                    <input type="text" class="form-control" placeholder="Enter last Name" required ng-model="LastName" tabindex="3">
-                                </div>
-                                <div class="form-group">
-                                    <label>Trust</label>
-                                    <input type="text" class="form-control" placeholder="Trust" ng-model="Trust" required tabindex="7">
-                                </div>                     
-                            </div>
-                            <div class="col-sm-3">
-                                <div class="form-group">
-                                    <label>SA ID</label>
-                                    <input type="number" class="form-control" placeholder="SA ID" ng-model="SAId" required tabindex="4" maxlength="15">
-                                </div>
-                                <div class="form-group">
-                                    <label>Trust Registration Number</label>
-                                    <input type="number" class="form-control" placeholder="Trust Registration Number" ng-model="TrustRegNo" required tabindex="8">
-                                </div>
-                            </div>
-                            <div class="col-sm-3">
-                               
-                                </div>
                         </div>
                     </div>
                 </div>
@@ -98,8 +99,80 @@
         </section>
         <!-- /.content -->
     </form>
-
+    <div class="modal fade" id="Success" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header modal-header-primary">
+                    <h3><i class="fa fa-user m-r-5"></i>Thank you</h3>
+                </div>
+                <div class="modal-body">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <fieldset>
+                                <div class="col-md-12 form-group user-form-group">
+                                    <label class="control-label" style="color:green">Client Added Successfully!</label>
+                                </div>
+                            </fieldset>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-danger pull-left" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+            <!-- /.modal-content -->
+        </div>
+        <!-- /.modal-dialog -->
+    </div>
+    <div class="modal fade" id="Failure" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header modal-header-primary">
+                    <h3><i class="fa fa-user m-r-5"></i>Sorry</h3>
+                </div>
+                <div class="modal-body">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <fieldset>
+                                <div class="col-md-12 form-group user-form-group">
+                                    <label class="control-label" style="color:green">Something went wrong, please try again!</label>
+                                </div>
+                            </fieldset>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-danger pull-left" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+            <!-- /.modal-content -->
+        </div>
+        <!-- /.modal-dialog -->
+    </div>
 </div>
+<script type="text/javascript">
+    $("#SAID").bind('keypress', function (e) {
+        if (e.keyCode == '9' || e.keyCode == '16') {
+            return;
+        }
+        var code;
+        if (e.keyCode) code = e.keyCode;
+        else if (e.which) code = e.which;
+        if (e.which == 46)
+            return false;
+        if (code == 8 || code == 46)
+            return true;
+        if (code < 48 || code > 57)
+            return false;
+    });
+    $("#SAID").bind('mouseenter', function (e) {
+        var val = $(this).val();
+        if (val != '0') {
+            val = val.replace(/[^0-9]+/g, "");
+            $(this).val(val);
+        }
+    });
+</script>
 
 
 
